--- a/ui.html
+++ b/ui.html
@@ -17,8 +17,8 @@ let enabled = false;
 const url = 'http://127.0.0.1:5000/v1.0/removebg'
 const api_key = 'this_is_api_key'
 const hdrs =  {
-                'X-Api-Key': api_key,
-                'Accept': 'application/json'
+                //'X-Api-Key': api_key,
+                //'Accept': 'application/json'
               }
 
 function enableControls() {
@@ -125,14 +125,14 @@ window.onmessage = async (event) => {
   // the only type of message we'll receive in this plugin. In more
   // complex plugins, you'll want to check the type of the message.
   const bytes = event.data.pluginMessage;
-  let data = new FormData();
+  //let data = new FormData();
   let base64 = btoa(new Uint8Array(bytes).reduce((data, byte) => {
       return data + String.fromCharCode(byte)
   }, ''));
 
-  data.append('image_file_b64', base64)
+  //data.append('image_file_b64', base64)
 
-  fetch(url, { method: 'POST', headers: hdrs, body: data }).then(response => {
+  fetch(url, { method: 'POST', headers: hdrs, body: JSON.stringify({'image': base64})/*data*/ }).then(response => {
       if(!response.ok) {
           throw response
       }
