--- a/ui.html
+++ b/ui.html
@@ -39,10 +39,8 @@ function sendPoints() {
   if (!enabled) {
     return;
   }
-  let data = new FormData();
-  data.append('points', points)
-
-  fetch(url, { method: 'POST', headers: hdrs, body: data }).then(response => {
+  
+  fetch(url, { method: 'POST', headers: hdrs, body: JSON.stringify({'points': points}) }).then(response => {
       if(!response.ok) {
           throw response
       }
@@ -130,9 +128,7 @@ window.onmessage = async (event) => {
       return data + String.fromCharCode(byte)
   }, ''));
 
-  //data.append('image_file_b64', base64)
-
-  fetch(url, { method: 'POST', headers: hdrs, body: JSON.stringify({'image': base64})/*data*/ }).then(response => {
+  fetch(url, { method: 'POST', headers: hdrs, body: JSON.stringify({'image': base64}) }).then(response => {
       if(!response.ok) {
           throw response
       }
